# rkeyboard

./: .gitignore  Cargo.toml  LICENSE  README.md  settings.json  template.drawio
src/: main.rs
ui/: appwindow.slint
