[package]
name = "rkeyboard"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.3"
rdev = "0.5"
hound = "3.5"
rodio = "0.17.1"
native-dialog = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
i-slint-backend-winit = "1.14.1"


[build-dependencies]
slint-build = "1.3"
